[package]
name = "crash_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
clap       = { version = "4.0", features = ["derive"] }
windows    = { version = "0.48.0", features = ["Win32_System_ProcessStatus", "Win32_System_EventLog", "Win32_System_Threading", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Memory"] }
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log        = "0.4"
env_logger = "0.10"
lettre = "0.10.0-rc.4" # For email notifications
notify-rust = "4.5"     # For system notifications
